--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,9 +65,9 @@ body {
 
 .todas_container {
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: aliceblue;
   border-radius: 10px;
-  grid-template-columns: repeat(2, 1fr);
   padding: 5% 5% 5% 5%;
   border-style: solid;
   gap: 20px;
@@ -75,24 +75,27 @@ body {
 
 .pelicula_item{
   background-color: #fefda4;
-  display: grid;
-  grid-template-rows: 1fr ;
   border-color: #a6a6a5;
   border-style: solid;
   border-radius: 10px;
 }
 
 .titulo{
-  display: grid;
-  grid-template-columns: 1fr;
+  font-size: 20px;
+  padding: 10px;
   text-align: center;
   align-items: center;
+  border-style: dashed;
+  border-color: #cfcfcf;
   background-color: aliceblue;
   border-radius: 20px;
-  margin: 4% 5% 3% 5%;
+  margin: 10px;
 }
 
 .imagen{
+  margin: auto auto auto auto;
+  padding: 10px 10px 10px 10px;
+  border-radius: 20px;
   max-width: 100%;
   max-height: 100%;
 }
@@ -177,11 +180,8 @@ body {
 
 /*====== Media-Queries ======*/
 
-@media (min-width: 768px) {
-  .pelicula_item {
-    grid-template-columns: 1fr 1fr;
-  }
+@media (max-width: 768px) {
   .todas_container {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
