--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <title>Movies</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="/javascripts/main.js" defer></script>
+    <script src="/javascripts/app.js" defer></script>
   </head>
   <!-- Header -->
 	<%- include('partials/header') %>
@@ -11,24 +11,8 @@
   <body>
     <h1>Peliculas! </h1>
     <section class="todas_container">
-      <% movies.forEach(movie => { %> 
-        <a href="/detail/<%= movie.id %>">
-        <article class="pelicula_item">
-            <img class="imagen" src="\images\Palomitas_de_Maiz_icono.webp" alt="img">
-            <div class="titulo">
-              <h2><%= movie.title %></h2>
-            </div>
-            <% generos.forEach(genero => { %>
-              <% if (genero.id === movie.GenreId) { %>
-                <div class="titulo">
-                  <%= genero.name %> </h2> 
-                </div>
-                <% } %>
-                <% }) %>
-              </article>
-            </a>
-        <% }) %> 
-      </section>
-    </body>
-    </html>
+     
+    </section>
+  </body>
+  </html>
     
