--- a/src/views/favorites.ejs
+++ b/src/views/favorites.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Movies</title>
+    <title>Favorites</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="/javascripts/app.js" defer></script>
+    <script src="/javascripts/favorites.js" defer></script>
   </head>
   <!-- Header -->
 	<%- include('partials/header') %>
 	<!-- /Header -->
   <body>
-    <h1>Movies!</h1>
+    <h1>Favorites Movies!</h1>
     <section class="todas_container">
      
     </section>
   </body>
   </html>
-    
