--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,20 +1,12 @@
 <header class="header_container">
     <div class="logo_menu">
-        <a href="/"><img class="logo" src="\images\Palomitas_de_Maiz_icono.webp" alt="img"></a>
+        <a class="logo" href="/"><img class="logo" src="\images\Palomitas_de_Maiz_icono.webp" alt="img"></a>
         <div class="menu">
             <nav class="nav">
-                    <a href="">RECOMENDADAS</a>
-                    <a href="">GENEROS</a>
-                    <a href="">DIRECTORES</a>
-            </nav>
-            <nav class="nav">
-                <a href="">usuario</a>
-                <a href="">LOGIN</a>
-                <a href="">REGISTRO</a>
+                    <a href="/favorites">Favorites</a>
             </nav>                
         </div>
     </div>
-    
     <div class="search">
         <input type="search" placeholder="Buscar pelicula..." class="buscador" />
     </div>
