--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<script src="/javascripts/search.js" defer></script>
 <header class="header_container">
     <div class="logo_menu">
         <a class="logo" href="/"><img class="logo" src="\images\Palomitas_de_Maiz_icono.webp" alt="img"></a>
@@ -8,6 +9,6 @@
         </div>
     </div>
     <div class="search">
-        <input type="search" placeholder="Buscar pelicula..." class="buscador" />
+        <input type="search" placeholder="Buscar pelicula..." class="buscador" id="buscador" />
     </div>
 </header>
