--- a/src/views/favorites.ejs
+++ b/src/views/favorites.ejs
@@ -9,7 +9,7 @@
 	<%- include('partials/header') %>
 	<!-- /Header -->
   <body>
-    <h1>Favorites Movies!</h1>
+    <h1 class="titulo">Favorites Movies!</h1>
     <section class="todas_container">
      
     </section>
