--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,7 +9,7 @@
 	<%- include('partials/header') %>
 	<!-- /Header -->
   <body>
-    <h1>Movies!</h1>
+    <h1 class="titulo">Movies!</h1>
     <section class="todas_container">
      
     </section>
